package cli;

public interface Menu {
    public void show(String title);
}
