/' Copier-coller sur https://www.planttext.com/ ou activer l'extension PlantUML (jebbs) '/

@startuml structure

/' https://plantuml.com/fr/theme
favoris : mars, plain, amiga, crt-green, sketchy '/
!theme mars

/' https://plantuml.com/fr/class-diagram '/

/' objets '/
package base {
    package base.cli {

        interface Controls {
            + <T> <T> getValue(String, Class<T>)
        }
        interface Menu{
            + void show()
        }
        abstract class PageView implements Menu, Controls {
            # String[] choices 
            # Scanner input
            # String clear
            + {abstract} boolean manageChoice(int)
        }
        class FrontPage extends PageView
        class AdminPage extends PageView {
            - void addShow()
            - void editShow()
            - void deleteShow()
        }
        class ShoppingPage extends PageView {
            - ArrayList<Ticket> cart
            + void getCart()
        }
        class ReceiptPage extends PageView {
            - void showReceipt()
            - void downLoadReceipt()
        }

        FrontPage -- AdminPage : > uses
        FrontPage -- ShoppingPage : > uses
        FrontPage -- ReceiptPage : > uses

    }

    package base.tickets {
        class Ticket {
            - Show show
            - String owner
            + Show getShow()
            + String getOwner()
            + String toString()
        }
        class Show {
            - {static} ArrayList<Show> list
            - String name
            - int capacity
            - ArrayList<Ticket> tickets
            - boolean isSoldOut
            + {static} ArrayList<Show> getShows()
            + {static} Show createShow(String, int)
            + Show findShow(String)
            + boolean isSoldOut()
            + Ticket buyTicket(Show, String)
            + ArrayList<Ticket> getTicketList(Show)
            + String toString()
        }

        Ticket "many" --o "1"  Show
        Ticket *-- Show
    }

    class BoxOffice {
        + {static} void main(String[])
        - {static} void initialiseShows()
        - {static} void loadData()
        - {static} void saveData()
    }

    BoxOffice -- FrontPage : > uses
    Show -- AdminPage : < uses
    Show -- ShoppingPage : < uses
    Ticket "many" --o "1" ShoppingPage
    ShoppingPage - ReceiptPage  : < uses

}

@enduml